# JukyOS-sugar

./: Makefile.in  aclocal.m4  configure  configure.ac
data/: Makefile.in
data/icons/: Makefile.am  Makefile.in
extensions/: Makefile.in
extensions/cpsection/: Makefile.am  Makefile.in
extensions/cpsection/aboutcomputer/: Makefile.in  model.py  view.py
extensions/cpsection/aboutme/: Makefile.in
extensions/cpsection/datetime/: Makefile.in
extensions/cpsection/frame/: Makefile.in
extensions/cpsection/keyboard/: Makefile.in
extensions/cpsection/language/: Makefile.in
extensions/cpsection/modemconfiguration/: Makefile.in
extensions/cpsection/network/: Makefile.in
extensions/cpsection/power/: Makefile.in
extensions/cpsection/updater/: Makefile.in
extensions/cpsection/updater/backends/: Makefile.in
extensions/deviceicon/: Makefile.in  network.py
extensions/globalkey/: Makefile.in  logout.py
po/: es.po
src/: Makefile.in
src/jarabe/: Makefile.in
src/jarabe/controlpanel/: Makefile.in
src/jarabe/desktop/: Makefile.in  favoritesview.py  networkviews.py
src/jarabe/frame/: Makefile.in
src/jarabe/intro/: Makefile.in
src/jarabe/journal/: Makefile.am  Makefile.in  journalactivity.py  journaltoolbox.py  listmodel.py  listview.py  misc.py  model.py  palettes.py  processdialog.py  volumestoolbar.py
src/jarabe/model/: Makefile.am  Makefile.in  network.py  processmanagement.py
src/jarabe/util/: Makefile.in
src/jarabe/util/telepathy/: Makefile.in
src/jarabe/view/: Makefile.in  palettes.py
