sugardir = $(pythondir)/jarabe/model
sugar_PYTHON =			\
	adhoc.py		\
	__init__.py		\
	buddy.py		\
	bundleregistry.py	\
	filetransfer.py		\
	friends.py		\
	invites.py		\
	olpcmesh.py		\
	mimeregistry.py		\
	neighborhood.py		\
        network.py              \
        notifications.py        \
	processmanagement.py	\
	shell.py		\
	screen.py		\
        session.py		\
	sound.py		\
	speech.py		\
	telepathyclient.py
